--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,21 @@
 spring:
   application:
     name: Coupon
+  h2:
+    console:
+      enabled: true
+      path: /h2-console # 콘솔 접속 URL 경로
+  datasource:
+    # JDBC URL 설정 (인메모리 데이터베이스는 보통 이 설정을 사용하며, URL을 명시적으로 지정해주는 것이 좋습니다.)
+    url: jdbc:h2:mem:coupon_db
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+springdoc:
+  api-docs:
+    path: /api-docs  # OpenAPI JSON 경로
+  swagger-ui:
+    path: /swagger-ui.html  # Swagger UI 경로
+    tags-sorter: alpha  # 태그 알파벳 순 정렬
+    operations-sorter: alpha  # API 알파벳 순 정렬
