[cicd]: cicd test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Coupon - Build and Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feature/cicd ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, feature/cicd ]
 
 jobs:
   build-and-deploy:
