[feat]: jwt 필터 검증 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Coupon
+    name: coupon
   h2:
     console:
       enabled: true
@@ -32,3 +32,9 @@ eureka:
       # 유레카 client와 server를 연결하는 url 주소
 #      defaultZone: http://eureka:8761/eureka/
       defaultZone: http://localhost:8761/eureka/
+
+
+jwt:
+  secret: "v3s5v8y/B?E(H+MbQeThWmZq4t7w9z$C&F)J@NcRfUjXn2r5u8x/A?D(G+KaPdSg"
+  # 주의: 이 키는 인증(Auth) 서버의 키와 똑같아야 합니다.
+  # 지금은 테스트용으로 아무 긴 문자열이나 넣으셔도 됩니다.
