--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ eureka:
     fetch-registry: true # 유레카 서버의 정보를 가져올지 여부
     service-url:
       # 유레카 client와 server를 연결하는 url 주소
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: http://team3-eureka:8761/eureka/
 #      defaultZone: http://localhost:8761/eureka/
 
 jwt:
