--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,12 @@ logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
