--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-!**/main/resources/application-dev.yml
+src/main/resources/application-dev.yml
 
 ### VS Code ###
 .vscode/
+application-dev.yml
