refactor: orchestration 방식 도입

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,9 +41,12 @@ rabbitmq:
     key: team3.coupon.welcome
     deducted: point.deducted
     used: coupon.used
+    compensate: payment.compensate
   queue:
     name: team3.coupon.welcome.queue.v2  # <-- 메시지가 쌓일 실제 우편함 이름
     coupon: team3.saga.coupon.queue
+    compensate: team3.saga.coupon.compensate.queue
+
   retry:
     exchange:
       name: team3.coupon.welcome.retry.exchange.v2
